@@ -3,6 +3,7 @@ shady-skin Revision History
 
 2016-03-26:
 - Some more stuff for plex II
+- Added setup-submenu für pluginspecific settings
 
 2016-03-11:
 - First steps with plug-plex-detail
